# agwiki

./: .gitignore  .repomixignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: auto-release.yml  coverage.yml  release.yml  test.yml
crates/agwiki/: Cargo.toml
crates/agwiki-core/: Cargo.toml
crates/agwiki-core/prompts/: wiki-index.md
crates/agwiki-core/src/: event.rs  ingest.rs  lib.rs  upkeep.rs  validate.rs
crates/agwiki-core/tests/: export_skill.rs  toolkit.rs  upkeep.rs  validate.rs
crates/agwiki-py/: Cargo.toml  README.md  pyproject.toml
crates/agwiki-py/src/: lib.rs
crates/agwiki-py/tests/: smoke.py
crates/agwiki/src/: config.rs  hooks.rs  ingest_render.rs  lib.rs  main.rs  serve.rs
crates/agwiki/src/serve/: search.rs  templates.rs
crates/agwiki/src/serve/assets/: search.js  style.css
crates/agwiki/tests/: cli_e2e.rs  cli_harness.rs  compile.rs  serve.rs
docs/adr/: 0001-agwiki-is-an-opinionated-single-user-ingest-pipeline.md  0002-three-crate-workspace-pure-core-thin-cli.md  0003-ingest-agnostic-in-materialize-agnostic-out.md  0004-identity-and-default-on-idempotency.md
prompts/: ingest.md  wiki-inbox.md  wiki-log.md
scripts/: run-tests.sh
skill/: SKILL.md  skill-project.toml
skill/references/: validate-json-schema.md
src/: compile.rs  export_skill.rs  ingest.rs  init.rs  lib.rs  main.rs  markdown_html.rs  prep.rs  serve.rs  toolkit.rs  upkeep.rs
src/serve/: search.rs  templates.rs
src/serve/assets/: index.html  page.html  search.html  search.js
tests/: cli_e2e.rs  cli_harness.rs  compile.rs  export_skill.rs  prep.rs  serve.rs  toolkit.rs  upkeep.rs  validate.rs
