[workspace]
members = ["crates/agwiki-core", "crates/agwiki", "crates/agwiki-py"]
resolver = "2"

[workspace.package]
version = "0.3.13"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/goagwiki/agwiki"

[patch.crates-io]
aikit-sdk = { git = "https://github.com/goaikit/aikit" }
